POM changes