@@ -10,10 +10,12 @@
   <name>JavaSamples</name>
   <url>http://maven.apache.org</url>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <javax.servlet-version>3.0.1</javax.servlet-version>
-  </properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javax.servlet-version>3.0.1</javax.servlet-version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+    </properties>
 
   <dependencies>
   <!-- 
@@ -59,4 +61,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+<build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
+                </compilerArgs>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
 </project>
